--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,10 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Covid-19 Stats</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <script src="//d3js.org/d3.v3.min.js"></script>
+
     <div id="root"></div>
     <!--
       This HTML file is a template.
